[gd_scene load_steps=22 format=3 uid="uid://mbj84hqv3fb5"]

[ext_resource type="Script" path="res://Scripts/AcidFall.gd" id="1_60wst"]
[ext_resource type="Texture2D" uid="uid://rbov06mr0cbj" path="res://Resources/Sprites/AcidFall/AcidFall(Acid).png" id="1_und1v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jf5fa"]
atlas = ExtResource("1_und1v")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o10ha"]
atlas = ExtResource("1_und1v")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q00iv"]
atlas = ExtResource("1_und1v")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq3vq"]
atlas = ExtResource("1_und1v")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhm2s"]
atlas = ExtResource("1_und1v")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ltv4"]
atlas = ExtResource("1_und1v")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0jj0"]
atlas = ExtResource("1_und1v")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8gx0"]
atlas = ExtResource("1_und1v")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xwex"]
atlas = ExtResource("1_und1v")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r20dq"]
atlas = ExtResource("1_und1v")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j2q8"]
atlas = ExtResource("1_und1v")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_muyda"]
atlas = ExtResource("1_und1v")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlm4n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf5fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o10ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q00iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq3vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhm2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ltv4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0jj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8gx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xwex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r20dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j2q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muyda")
}],
"loop": false,
"name": &"vanish",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1y870"]
size = Vector2(64, 256)

[sub_resource type="Animation" id="Animation_3wmln"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_6evvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.831373)]
}

[sub_resource type="Animation" id="Animation_dol58"]
resource_name = "vanish"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"vanish"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.831373), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 0.333333), Color(1, 1, 1, 0.164706), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2ahb4"]
resource_name = "appear"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"vanish"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.0352941), Color(1, 1, 1, 0.164706), Color(1, 1, 1, 0.333333), Color(1, 1, 1, 0.498039), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.831373)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0ixe"]
_data = {
"Idle": SubResource("Animation_3wmln"),
"RESET": SubResource("Animation_6evvq"),
"appear": SubResource("Animation_2ahb4"),
"vanish": SubResource("Animation_dol58")
}

[node name="AcidFall" type="StaticBody2D"]
script = ExtResource("1_60wst")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.831373)
position = Vector2(-12, 0)
scale = Vector2(1.5, 2)
sprite_frames = SubResource("SpriteFrames_tlm4n")
animation = &"Idle"
autoplay = "Idle"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-16, 0)
shape = SubResource("RectangleShape2D_1y870")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-12, 0)
shape = SubResource("RectangleShape2D_1y870")
disabled = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g0ixe")
}
autoplay = "Idle"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
